adding gallery support, download page support.

--- a/downloads.html
+++ b/downloads.html
@@ -7,7 +7,10 @@ title: Downloads
 <div id="downloads">
   <h5>Releases (stable)</h5>
   <ul id="stable">
-    <li>At some point, I will try to utilize the github api to fetch all tags.</li>
+    <!--{% get_tags %} this does not work on github pages due to jekyll's --safe option.-->
+    <li>Download 0.7.5145.12730 (<a href='https://api.github.com/repos/Starstructor/starstructor/zipball/0.7.5145.12730'>ZIP</a> | <a href='https://api.github.com/repos/Starstructor/starstructor/tarball/0.7.5145.12730'>TAR</a>)</li>
+    <li>Download 0.7.5145.7246 (<a href='https://api.github.com/repos/Starstructor/starstructor/zipball/0.7.5145.7246'>ZIP</a> | <a href='https://api.github.com/repos/Starstructor/starstructor/tarball/0.7.5145.7246'>TAR</a>)</li>
+    <li>Download v0.7.5143.8266 (<a href='https://api.github.com/repos/Starstructor/starstructor/zipball/v0.7.5143.8266'>ZIP</a> | <a href='https://api.github.com/repos/Starstructor/starstructor/tarball/v0.7.5143.8266'>TAR</a>)</li>
   </ul>
 
   <h5>Unstable</h5>
